# deepfry

./: .gitignore  Cargo.toml  preset.toml
src/: lib.rs  main.rs
