[package]
name = "deepfry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap-num = "1.1.1"
image = "0.25.2"
rand = { version = "0.8.5", features = ["small_rng"] }